--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "mongoose": "^5.1.7",
     "pug": "^2.0.3",
     "request": "^2.87.0"
+  },
+  "scripts": {
+    "start":"node server/app"
   }
 }
